# Task-Automation

./: CHANGELOG.md  CMakeLists.txt  README.md  aur.sh  build-arch.sh  checksum-helper.sh  install-udev-dev-rule.sh  run-dev.sh
examples/: simple.auto
packaging/linux/: taskautomation.desktop
packaging/udev/: 70-taskautomation.rules
resources/: resources.qrc
src/: EvdevRecorder.cpp  EvdevRecorder.h  KWinCursorBridge.cpp  KWinCursorBridge.h  MacroEvent.cpp  MacroEvent.h  MacroFile.cpp  MacroFile.h  MacroPlayer.cpp  MacroPlayer.h  MainWindow.cpp  MainWindow.h  UInputDevice.cpp  UInputDevice.h  main.cpp
